# cinetopia

./: .env.example  .env.preprod  .gitignore  Dockerfile  LAUNCHERS.md  LICENSE  README.md  cinetopia.bat  db_preprod.sqlite3  deploy_check.py  deploy_preprod.bat  docker-compose.yml  init_preprod_db.py  pyproject.toml  requirements.txt  requirements_minimal.txt  setup_preprod_simple.py  start_cinetopia.bat  start_cinetopia.ps1  start_cinetopia.py  start_fast.bat  start_simple.bat  start_uv.bat  test_app.py  test_preprod.py  validate_preprod.py
cinetopia/: asgi.py  config.py  settings.py  urls.py  wsgi.py
myapp_cinetopia/: forms.py  models.py  recommender_engine.py  search_api.py  services.py  views.py  weather_api.py
myapp_cinetopia/migrations/: 0001_initial.py
myapp_cinetopia/static/css/: cinetopia-unified.css
myapp_cinetopia/templates/: home.html  login.html  movie.html  results.html  signup.html  unified_home.html
